--- a/public/index.html
+++ b/public/index.html
@@ -38,20 +38,22 @@
                         </li>
                     </ul>
                     <div class="nav__login nav-login">
-                        <svg class="nav-login__icon">
-                            <use xlink:href="img/icons.svg#flag"></use>
-                        </svg>
+                        
                         <select name="lang" id="lang" class="nav-login__select nav-login-select">
                             <option value="">EN</option>
                             <option value="">RU</option>
                             <option value="">DE</option>
                             <option value="">FR</option>
                         </select>
-                        <button class="nav-login__button">login</button>
+                        <button class="nav-login__button ">login</button>
                     </div>
-                    <button class="nav__toggle">burger</button>
+                    <svg class="nav__toggle">
+                        <use xlink:href="img/icons.svg#burger"></use>
+                    </svg>
                 </div>
-                <button class="nav__toggle">burger</button>
+                <svg class="nav__toggle">
+                    <use xlink:href="img/icons.svg#burger"></use>
+                </svg>
             </nav>
             <h1 class="header__title">cloudbudget</h1>
             <div class="header__subtitle">
@@ -103,11 +105,11 @@
                     <input  class="contact-form__input" type="text" placeholder="Last Name">
                     <input  class="contact-form__input contact-form__input--tel"  type="tel" placeholder="Phone Number">
                     <select class="contact-form__select" name="" id="">
-                        <option value="">select option</option>
-                        <option value="">select option</option>
-                        <option value="">select option</option>
-                      <option value="">select option</option>
-                        <option value="">select option</option>
+                        <option value="">select option 1</option>
+                        <option value="">select option 2</option>
+                        <option value="">select option 3</option>
+                        <option value="">select option 4</option>
+                        <option value="">select option 5</option>
                     </select>
                     <button class="contact-form__button"type="submit"> submit Now</button>
                     
